--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ button {
     background: #ff1744;
     color: #fff;
     box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    transition: transform 0.25s ease;
 }
 
 #no {
@@ -114,7 +115,6 @@ input {
 .countdown {
     margin-top: 20px;
     font-size: 1.4rem;
-    letter-spacing: 1px;
 }
 
 /* Fireworks canvas */
@@ -190,7 +190,7 @@ canvas {
 </div>
 
 <script>
-/* 🔥 Fireworks */
+/* 🎆 Fireworks */
 const canvas = document.getElementById('fireworks');
 const ctx = canvas.getContext('2d');
 canvas.width = innerWidth;
@@ -241,10 +241,12 @@ function startFireworks() {
     },3500);
 }
 
-/* No button playful move */
+/* ❌ No button slips freely */
 const noBtn = document.getElementById('no');
 noBtn.onmouseenter = () => {
-    noBtn.style.transform = `translate(${(Math.random()-0.5)*60}px, ${(Math.random()-0.5)*30}px)`;
+    const x = (Math.random() - 0.5) * 180;
+    const y = (Math.random() - 0.5) * 120;
+    noBtn.style.transform = `translate(${x}px, ${y}px)`;
 };
 noBtn.onclick = e => e.preventDefault();
 
@@ -255,7 +257,7 @@ const show = id => {
 };
 
 document.getElementById('yes1').onclick = () => {
-    startFireworks();        // 🎆 HERE IS THE NEW PART
+    startFireworks();   // 🎆 fireworks at YES
     show('step2');
 };
 
@@ -268,7 +270,7 @@ document.getElementById('favPerson').oninput = () => {
     setTimeout(()=>document.getElementById('favPerson').value='You ❤️',400);
 };
 
-/* Hearts */
+/* Hearts on reveal */
 function heart(x,y){
     const h=document.createElement('div');
     h.className='heart';
